Fix gaps in css

--- a/css/main.css
+++ b/css/main.css
@@ -1,70 +1,94 @@
-html {
-  box-sizing: border-box;
-  background-color: #ffe500;
-  line-height: 1.5;
-}
-
 *, *::before, *::after {
   box-sizing: inherit;
 }
 
+html {
+  box-sizing: border-box;
+  line-height: 1.5;
+}
+
+header {
+  background-color: #ffe500;
+  padding-bottom: .25em;
+}
+
 h1 {
+  font-family: "Sigmar One", sans-serif;
   font-size: 3rem;
+  color: #b20953;
   text-align: center;
+  margin: 0;
 }
 
-h1, h2 {
-  color:#b20953;
-  font-family: 'Sigmar One', sans-serif;
-
-}
-
-.nav {
-  display: inline-block;
+nav ul {
   list-style-type: none;
   text-align: center;
-  color:#fff;
+  font-family: Georgia, serif;
+  font-size: 1.125rem;
+  margin: 0;
+  padding: 0;
 }
 
-.nav li {
-  font-size: 1.875rem;
+nav li {
+  display: inline;
+}
+
+nav a {
   display: inline-block;
-  background-color: #b2a212;
-  border-radius: 4px;
-  text-align: center;
-  color: #fff
   padding: .2em .5em .3em;
-}
-
-li a:hover {
-  background-color: #cc1465;
-}
-
-li a {
   color: #fff;
   background-color: #b2a212;
   text-decoration: none;
+  text-align: center;
   border-radius: 4px;
-  padding: .2em .5em .3em
-
 }
 
-main {
-  background-color: #fff;
-  padding: 0em .75em;
-  display: inline-block;
+nav a:hover {
+  background-color: #cc1465;
+}
 
+.current {
+  background-color: #b20953;
 }
 
 h2 {
+  font-family: "Sigmar One", sans-serif;
   font-size: 1.875rem;
+  color: #b20953;
+  padding-left: .25em;
 }
 
-figcaption {
-  font-family: Georgia, serif;
+img {
+  display: block;
+  width: 100%;
+  max-width: 100%;
+  padding: 0 .75em;
+}
+
+p {
+  padding-left: .5em;
+  padding-bottom: 0;
   font-size: 1.125rem;
+  line-height: 1.4;
   color: #2f2d13;
 }
+
+body {
+  margin: 0;
+  padding: 0;
+}
+
+main {
+  margin: 0;
+}
+
 footer {
+  background-color: #ffe500;
   text-align: center;
+  padding: 1.25em;
+  font-size: .75rem;
+}
+
+small {
+  font-size: .75rem;
 }
